flexbox image alignment, fixing header

--- a/profilepage.css
+++ b/profilepage.css
@@ -1,22 +1,51 @@
 
-/* *{
-    margin:0;
-    padding:0;
-} */
 
 body{
     font-family:arial;
-    background-color:white;
+   /* background-color:#e9faff; */
+    
+}
+
+.header_parent{
+    display:flex;
+    flex-wrap:wrap;
+    flex-direction:row;
+    align-self:center; 
+    background-color:#DFEFF7;
+    padding:0px;
+    justify-content:space-between;
+    margin:25px;
+    height:700px;
 }
 
 .navbar{
+    display:flex;
     list-style-type:none;
     overflow:hidden;
     height:15px;
-    margin-top:35px;
-    margin-right:150px;
-    text-align:center;  
+    padding-left:330px;
+    margin-top:10px;
+   /* position:absolute;
+    right:200px;
+    margin-top:55px; */   
         
+}
+
+.navbar_child{
+    display:flex;
+  
+}
+
+.houseicon{
+    width:40px;
+    height:40px;
+    padding-right:500px;
+}
+
+.houseicon_child{
+    display:flex;
+    justify-content:flex-start;
+  
 }
 
 li{
@@ -35,12 +64,13 @@ li a:hover{
     color:gray;
 }
 
-.homepic{
-    position:absolute;
-    top:170px;
-    margin-left:142px;
-    width:680px;
-    height:460px;   
+.homepagepic{
+    margin-left:auto;
+    margin-right:auto;
+    margin-bottom:90px;
+    width:1000px;
+    height:450px;
+   /* box-shadow:2px 8px 10px 2px grey; */
 }
 
 
@@ -48,34 +78,42 @@ li a:hover{
     color:black;
     font-size:40px;
     font-family:times;
-    position:absolute;
-    top:0;
-    left:150px;   
+    text-align:center;
+    margin-top:6px;
+    margin-bottom:0px;
+   /* position:absolute;
+    top:15px;
+   /* left:600px;   */
+     
 }
 
 .notes{
     font-size:14px;
     font-family:'times';
-    position:absolute;
-    top:54px;
-    left:150px;
-}
+    text-align:center;
+   
+   /* position:absolute;
+    top:70px;
+    left:675px; */
+} 
 
 h2{
     font-size:26px;
     font-family:arial;
     position:absolute;
     left:150px;
-    margin-top:100px;
+    margin-top:150px;
 }
  
-
+/* 
 .recentposts{
-    font-size:16px;
+    font-size:20px;
     position:absolute;
     right:255px;
     top:150px;
-}
+} */
+
+
 
 .kidlinks{
     font-size:20px;
@@ -102,6 +140,29 @@ a.kidlinks:hover{
     font-family:times;
 }
 
+.posts{
+    background-color:blue;
+}
+
+.pic_child1{
+    height:300px;
+    width:300px;
+    margin-left:100px;
+    padding-top:200px;
+}
+
+.pic_child2{
+    height:300px;
+    width:300px;
+    padding-top:200px
+}
+
+.pic_child3{
+    height:300px;
+    width:300px;
+    margin-right:100px;
+    padding-top:200px
+}
 /*
 .blogpostcontainer{
     background-color:white;
@@ -129,18 +190,9 @@ h3 a:hover{
 
 /*
 .heading{
-    text-align:left;
+    text-align:center;
     font-size:20px;
     padding-top:30px;  
-}
-
-/*
-.heading{
-    background-color:rgb(230, 230, 230);
-    height:420px;
-    margin:100px 75px 75px ;
-    
-
 }
 */
 
